force-app/main/default/objects/Itinerary_Item__c/Itinerary_Item__c.object-meta.xml
<CustomObject>
    <label>Itinerary Item</label>
    <nameField>
        <label>Itinerary Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itinerary Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>