force-app/main/default/objects/Itinerary_Item__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK( Planned_Date_Time__c )),
        NOT(ISBLANK(Duration_Hours__c)),
        Duration_Hours__c &gt;= 0
    ),
    Planned_Date_Time__c + ( Duration_Hours__c / 24 ),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>