force-app/main/default/objects/Itinerary_Item__c/fields/Planned_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Date_Time__c</fullName>
    <label>Planned Date/Time</label>
    <type>DateTime</type>
</CustomField>