force-app/main/default/objects/Itinerary_Item__c/fields/Planned_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Time__c</fullName>
    <label>Planned Time</label>
    <type>Time</type>
</CustomField>